--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
-    "start": "node ./build/index.js",
+    "start": "tsc && node build/index.js",
     "test": "jest",
     "build": "tsc"
   },
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/knex": "^0.16.1",
     "@types/node": "^20.10.0",
     "@types/uuid": "^9.0.7",
@@ -27,9 +28,8 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@types/jsonwebtoken": "^9.0.5",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.0.1",
